// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabbed Tabbed renders correctly 1`] = `
<div
  className="css-13ku56z"
>
  <div
    className="css-1cfjzc4"
  >
    <button
      className="css-1fhlilz"
      onClick={[Function]}
    >
      Create Replica Set
    </button>
    <button
      className="css-36krrg"
      onClick={[Function]}
    >
      Another tab
    </button>
    <button
      className="css-36krrg"
      onClick={[Function]}
    >
      Third tab
    </button>
  </div>
  Tab content
</div>
`;

exports[`Tabbed Tabbed small renders correctly 1`] = `
<div
  className="css-j7qwjs"
>
  <div
    className="css-17jvrcz"
  >
    <button
      className="css-yfjdt9"
      onClick={[Function]}
    >
      Create Replica Set
    </button>
    <button
      className="css-14dzjbp"
      onClick={[Function]}
    >
      Another tab
    </button>
    <button
      className="css-14dzjbp"
      onClick={[Function]}
    >
      Third tab
    </button>
  </div>
  Tab content
</div>
`;
